--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -99,10 +99,6 @@
   color: #3B5998;
 }
 
-.yt-icon:hover {
-  color:#FF0000
-}
-
 .fb-icon {
   margin-right: 30px;
   margin-left: 30px;
@@ -191,6 +187,13 @@
 @media screen and (min-width: 961px) and (max-width: 1227px) {
   .footer-container {
     width: 128%;
+  }
+}
+
+@media screen and (min-width: 600px) and (max-width: 768px) {
+  .icons-wrapper {
+    padding-top: 10px;
+    font-size: 20px;
   }
 }
   
