--- a/src/components/pages/Homepage/Home.css
+++ b/src/components/pages/Homepage/Home.css
@@ -2,7 +2,7 @@
     background-image: url('background.jpg');
     background-size: cover;
     background-position: center;
-    opacity: 75%;
+    opacity: 0.75;
     height: 100vh;
     width: 100%;
     display: flex;
