--- a/src/components/pages/Login/Verify.css
+++ b/src/components/pages/Login/Verify.css
@@ -31,7 +31,7 @@
 }
 .table-confirm{
     display: flex;
-    font-size: 20px;
+    /* font-size: 20px; */
     color: #777;
     justify-content:center;
     margin:10px;
