--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -20,8 +20,7 @@
 }
 
 .footer-subscription > p {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .footer-subscription-heading {
@@ -100,7 +99,7 @@
 }
 
 .fb-icon {
-  margin-right: 30px;
+  margin-right: 48px;
   margin-left: 30px;
 }
 /*--------------------------------*/
@@ -112,6 +111,8 @@
   align-items: center;
   max-width: 1000px;
   margin: 25px auto 0px auto;
+  cursor: default;
+  font-size: 18px;
 }
 
 
@@ -179,7 +180,7 @@
   }
 
   .social-icon-link {
-    font-size: 30px;
+    font-size: 36px;
     margin-bottom: 0px;
   }
 }
