--- a/src/components/pages/RequirePage/Card.css
+++ b/src/components/pages/RequirePage/Card.css
@@ -14,10 +14,11 @@
     height: 350px;
     text-decoration: none;
     border-radius: 15px;
+    transition: 0.4s ease-out;
   }
   
   .require__container-card:hover {
-    transition: .2s ease-in;
+    transition: .4s ease-in-out;
     background-color: #045de9;
     transform: scale(1.1);
     background-image: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
@@ -102,9 +103,7 @@ text-shadow: 0 0 10px #FFFFFF;
     }
 
     .require__container-card:hover {
-      transition: all 0.4s ease-out;
-      animation: pile-hover 1s infinite;
-
+      transition: all 0.4s ease-in-out;
     }
   }
 
