t sửa những gì có thể r, đ sửa hình ảnh nửa đâu, t lm bài lab Java đây

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -21,6 +21,7 @@
 
 .footer-subscription > p {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  cursor: default;
 }
 
 .footer-subscription-heading {
