--- a/src/components/pages/Homepage/Home.css
+++ b/src/components/pages/Homepage/Home.css
@@ -17,6 +17,7 @@
     color: #fff;
     font-size: 100px;
     margin-top: -100px;
+    cursor: default;
 }
 
 .hero-container > p {
@@ -24,6 +25,7 @@
     color: #fff;
     font-size: 32px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    cursor: default;
 } 
 
 .hero-btns {
