--- a/src/components/pages/Info page/MyCarousel.css
+++ b/src/components/pages/Info page/MyCarousel.css
@@ -9,23 +9,25 @@
 
 .InfiniteCarousel {
     position: relative;
-    width: 65%;
+    width: 90%;
 }
 
 .image-wrapper {
     display: flex;
     justify-content: center;
-    height: 40%;
+    /* height: 400px; */
     margin-bottom: 40px;
 }
 
-.InfiniteCarousel  img{
-    height: 230px;
+.InfiniteCarousel img{
+    height: 30vh;
     /* border: 2px solid blue; */
 }
 
 .InfiniteCarousel  img:hover {
-    border: 3px solid #5a73fc;
+    /* border: 3px solid #5a73fc; */
+    cursor: pointer;
+    opacity: 0.7;
 }
 
 .photo-wrapper {
@@ -103,7 +105,7 @@
     }
 
     .InfiniteCarousel {
-        width: 65%;
+        width: 95%;
     }
 
     .text-paragraph-body {
@@ -120,7 +122,7 @@
 /*-------- MEDIUM DEVICES --------------*/
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
     .InfiniteCarousel {
-        width: 90%;
+        width: 95%;
     }
 }
 
@@ -141,3 +143,52 @@
         width: 80%;
     }
 } */
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  }
+  
+  /* Modal Content (image) */
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-height: 80vh;
+    /* max-width: 700px; */
+  }
+.modal-content {  
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+@keyframes zoom {
+    from {transform: scale(0.1)} 
+    to {transform: scale(1)}
+}
+  /* The Close Button */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+    z-index: 999;
+}
+  
+  .close:hover,
+  .close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+  }
